--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -36,11 +36,11 @@
             <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
-            <Button id="login-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="187.0" text="Anmelden" onAction="#showMainPage" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <Button id="login-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#showMainPage" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="7" GridPane.rowIndex="6" />
              <Rectangle height="70.0" styleClass="rounded-rectangle" width="495.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Rectangle height="69.0" styleClass="rounded-rectangle" width="493.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-             <Button minHeight="35.0" minWidth="35.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="178.0" styleClass="cancel-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
+             <Button fx:id="cancelButton" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#closeLoginPage" prefHeight="42.0" prefWidth="178.0" styleClass="cancel-button" text="Abbrechen" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="6">
              </Button>
               <Label prefHeight="35.0" prefWidth="174.0" styleClass="labelNameForLogin" text="Benutzername:" GridPane.columnIndex="3" GridPane.rowIndex="2">
 
@@ -48,16 +48,15 @@
               <Label prefHeight="35.0" prefWidth="139.0" styleClass="labelNameForLogin" text="Passwort:" GridPane.columnIndex="3" GridPane.rowIndex="4">
                 
               </Label>
-            <TextArea minWidth="-Infinity" prefHeight="64.0" prefWidth="294.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-            <TextArea minWidth="-Infinity" prefHeight="66.0" prefWidth="294.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
 
          </children>
         </GridPane>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8e1016" height="42.0" width="528.0" />
 
-      
+
               <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
-      <PasswordField styleClass="passwort-input" layoutX="220.0" layoutY="145.0" stylesheets="@style.css" />
+      <PasswordField layoutX="220.0" layoutY="145.0" styleClass="passwortInput" stylesheets="@style.css" />
+        <TextField layoutX="220.0" layoutY="60.0" styleClass="usernameInput" stylesheets="@style.css" />
 
     </children>
 </AnchorPane>
