--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -46,9 +46,9 @@
       </Label>
 
       <!--file upload button-->
-      <Button fx:id="fileUploadMatrikel" contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="fileUploadButton" text="Datei hochladen" textAlignment="CENTER" onAction="#handleFileUploadMatrikel">
+      <Button fx:id="fileUploadMatrikel" contentDisplay="CENTER" layoutX="446.0" layoutY="239.0" minWidth="200.0" mnemonicParsing="false" onAction="#handleFileUploadMatrikel" prefHeight="47.0" prefWidth="250.0" styleClass="fileUploadButton" text="Datei hochladen" textAlignment="CENTER">
       </Button>
-      <Button fx:id="fileUploadGrade" contentDisplay="CENTER" layoutX="446.0" layoutY="335.0" minWidth="200.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="250.0" styleClass="fileUploadButton" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="335.0" onAction="#handleFileUploadGrade">
+      <Button fx:id="fileUploadGrade" contentDisplay="CENTER" layoutX="446.0" layoutY="344.0" minWidth="200.0" mnemonicParsing="false" onAction="#handleFileUploadGrade" prefHeight="47.0" prefWidth="250.0" styleClass="fileUploadButton" text="Datei hochladen" textAlignment="CENTER" AnchorPane.leftAnchor="446.0" AnchorPane.topAnchor="344.0">
       </Button>
 
 
@@ -81,7 +81,7 @@
       </Button>
 
       <!--button to call out preview of Matrikeltabelle-->
-      <Button fx:id="previewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false" visible="false" onAction="#showPreviewMatrikel" styleClass="miniIcons">
+      <Button fx:id="previewMatrikel" layoutX="1114" layoutY="245.0" mnemonicParsing="false" onAction="#showPreviewMatrikel" styleClass="miniIcons" visible="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/icon-eye.png" />
@@ -93,7 +93,7 @@
       </Button>
 
       <!--button to call out preview of Notentabelle-->
-      <Button fx:id="previewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false" visible="false" onAction="#showPreviewExam" styleClass="miniIcons">
+      <Button fx:id="previewExam" layoutX="1114" layoutY="350.0" mnemonicParsing="false" onAction="#showPreviewExam" styleClass="miniIcons" visible="false">
          <graphic>
             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/icon-eye.png" />
@@ -106,25 +106,21 @@
 
       <!--info-icons to show the tool tips-->
       <Button fx:id="infoMatrikel" layoutX="60" layoutY="245.0" mnemonicParsing="false" styleClass="miniIcons">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-info.png" />
-            </ImageView>
-         </graphic>
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Matrikelnummer und Namen" />
          </tooltip>
       </Button>
       <Button fx:id="infoExam" layoutX="60" layoutY="350.0" mnemonicParsing="false" styleClass="miniIcons">
-         <graphic>
-            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
-               <Image url="@images/icon-info.png" />
-            </ImageView>
-         </graphic>
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Noten(punkten)" />
          </tooltip>
       </Button>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="72.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-info.png" />
+      </ImageView>
+      <ImageView fitHeight="35" fitWidth="35" layoutX="72.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@images/icon-info.png" />
+      </ImageView>
 
    </children>
 </AnchorPane>
