--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/hello-view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
@@ -106,23 +105,26 @@
       </Button>
 
       <!--info-icons to show the tool tips-->
-      <Button fx:id="infoMatrikel" layoutX="60" layoutY="245.0" mnemonicParsing="false" styleClass="miniIcons">
+      <Button fx:id="infoMatrikel" layoutX="60.0" layoutY="240.0" mnemonicParsing="false" styleClass="miniIcons">
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Matrikelnummer und Namen" />
          </tooltip>
+         <graphic>
+            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/icon-info.png" />
+            </ImageView>
+         </graphic>
       </Button>
-      <Button fx:id="infoExam" layoutX="60" layoutY="350.0" mnemonicParsing="false" styleClass="miniIcons">
+      <Button fx:id="infoExam" layoutX="60.0" layoutY="343.0" mnemonicParsing="false" styleClass="miniIcons">
          <tooltip>
             <Tooltip styleClass="tooltip" text="Tabelle mit Noten(punkten)" />
          </tooltip>
+         <graphic>
+            <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/icon-info.png" />
+            </ImageView>
+         </graphic>
       </Button>
-      <ImageView fitHeight="35" fitWidth="35" layoutX="72.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
-         <Image url="@images/icon-info.png" />
-      </ImageView>
-      <ImageView fitHeight="35" fitWidth="35" layoutX="72.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
-         <Image url="@images/icon-info.png" />
-      </ImageView>
 
    </children>
 </AnchorPane>
-
