--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/login.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane prefHeight="290.0" prefWidth="288.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
+<AnchorPane prefHeight="290.0" prefWidth="288.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.grp8.dhbwmultigradingtoolkit.Controller">
     <children>
         <GridPane layoutX="7.0" layoutY="-14.0" prefHeight="290.0" prefWidth="521.0">
             <columnConstraints>
@@ -36,7 +30,7 @@
             <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
             </rowConstraints>
          <children>
-            <Button id="login-button" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#showMainPage" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+            <Button id="login-button" fx:id="btnlogin" minHeight="35.0" minWidth="35.0" mnemonicParsing="false" onAction="#showMainPage" prefHeight="42.0" prefWidth="187.0" text="Anmelden" GridPane.columnIndex="7" GridPane.rowIndex="6" />
              <Rectangle height="70.0" styleClass="rounded-rectangle" width="495.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Rectangle height="69.0" styleClass="rounded-rectangle" width="493.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
@@ -55,8 +49,8 @@
 
 
               <Label layoutX="181.0" layoutY="2.0" styleClass="login-toolname" text="Multigrading-Tool" AnchorPane.topAnchor="2.0" />
-      <PasswordField layoutX="220.0" layoutY="145.0" styleClass="passwortInput" stylesheets="@style.css" />
-        <TextField layoutX="220.0" layoutY="60.0" styleClass="usernameInput" stylesheets="@style.css" />
+      <PasswordField fx:id="inputpassword" layoutX="220.0" layoutY="145.0" styleClass="passwortInput" stylesheets="@style.css" />
+        <TextField fx:id="inputuser" layoutX="220.0" layoutY="60.0" styleClass="usernameInput" stylesheets="@style.css" />
 
     </children>
 </AnchorPane>
