Add styles to dialog window

--- a/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
+++ b/src/main/resources/org/grp8/dhbwmultigradingtoolkit/style.css
@@ -156,3 +156,11 @@
     -fx-hbar-policy: null;
     -fx-vbar-policy: null;
 }
+
+#errorWarning{
+    -fx-text-fill: -fx-light-red ;
+}
+
+#successfullyUploaded{
+    -fx-text-fill: -fx-dark-grey ;
+}
